[metadata]
name = pyease
author = "Jamil Raichouni"
author_email = "raichouni@gmail.com"

python_requires = >=3.8
packages = find:

[options.extras_require]
docs = 
    Sphinx>=3.3.1
    sphinx-rtd-theme>=0.5.0
    sphinx-autobuild>=2020.9.1
test =
    black
    flake8
    doc8
    flake8-builtins
    flake8-docstrings
    flake8-isort
    flake8-quotes
    flake8-rst-docstrings
    flake8-unused-arguments
    isort
    mypy
    pydocstyle
    pyflakes
    pytest
    pytest-cov
    pytest-xdist
    Sphinx
    sphinx-autobuild
    sphinx-rtd-theme
    toml
    vulture

[versioneer]
VCS = git
style = pep440
versionfile_source = mddocgen/_version.py
versionfile_build = mddocgen/_version.py
tag_prefix = v
parentdir_prefix = mddocgen-v

[options.entry_points]
mddocgen.jobgen.source =
    python-script = mddocgen.jobgen.source.python_script:PythonScriptGetter
    confluence-template-getter = mddocgen.jobgen.source.confl_template:ConfluenceTemplateGetter
mddocgen.jobgen.target = 
    confluence-attachment-upload = mddocgen.jobgen.target.confl_attachment_updater:ConflAttachmentUpdater
    pdf-maker = mddocgen.jobgen.target.pdf_maker:PDFMaker
    confluence-page-maker = mddocgen.jobgen.target.confl_page_maker:ConfluencePageMaker
    confluence-index-maker = mddocgen.jobgen.target.confl_index_maker:ConfluenceIndexMaker
    confluence-gitlab-ci-maker = mddocgen.jobgen.target.confl_gitlabci_maker:ConfluenceGitlabCIMaker
mddocgen.workers = 
    PDFWorker = mddocgen.workers.pdfworker:produce_pdf_report
    ConfluenceTemplateGetter = mddocgen.workers.ctgetter:fetch_valid_template
    ConfluenceIndexMaker = mddocgen.workers.cfindexmaker:render_template_for_confluence
    ConfluencePageMaker = mddocgen.workers.cfpagemaker:render_template_for_confluence
    ConfluencePageUpdater = mddocgen.workers.cfpageupdater:update_confluence_page
    ConflAttachmentUpdater = mddocgen.workers.cfattachmentupdater:attach_to_page
    Zipper = mddocgen.workers.zipper:run_job
    RunPythonScript = mddocgen.workers.pythonworker:run_python_script
    ConfluenceGitlabCIMaker = mddocgen.workers.cfgitlabcimaker:run_confluence_gitlab_ci_maker

[build_sphinx]
source-dir = docs/source
build-dir = public
