[metadata]
name = pyease
author = Jamil Raichouni
author_email = jamil.raichouni@deutschebahn.com

[options]
python_requires = >=3.8
packages = find:

[options.extras_require]
docs = 
    Sphinx>=3.3.1
    sphinx-rtd-theme>=0.5.0
    sphinx-autobuild>=2020.9.1
test =
    black
    flake8<=3.7
    doc8
    flake8-builtins
    flake8-docstrings
    flake8-isort
    flake8-quotes
    flake8-rst-docstrings
    flake8-unused-arguments
    isort
    mypy
    pydocstyle
    pyflakes
    pytest
    pytest-cov
    pytest-xdist
    Sphinx
    sphinx-autobuild
    sphinx-rtd-theme
    toml
    vulture

[versioneer]
VCS = git
style = pep440
versionfile_source = pyease/_version.py
versionfile_build = pyease/_version.py
tag_prefix = v
parentdir_prefix = pyease-v
